Procfile for Heroku

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=hunter_guide
-DB_USERNAME=root
-DB_PASSWORD=1971
+DB_USERNAME=hunter
+DB_PASSWORD=Luc@s1971
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
