--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.2",
         "barryvdh/laravel-ide-helper": "^2.5",
+        "intervention/image": "^2.4",
         "fideloper/proxy": "^4.0",
         "jsdecena/baserepo": "^1.0",
         "laravel/framework": "5.7.*",
